# code-batch

./: .gitignore  .polyglot-cache.json  .spec_baseline_hash  CHANGELOG.md  Dockerfile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  SPEC.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  dogfood.yml  publish.yml  release.yml
docs/: GATES.md  INTEGRATION.md  PHASE2_ACCEPTANCE.md  PHASE2_CHARTER.md  PHASE2_RULES.md  PHASE3_CHARTER.md  PHASE3_GATES.md  PHASE6_CHARTER.md  PHASE7_CHARTER.md  PHASE8_CHARTER.md  TASKS.md  index.md
schemas/: api.schema.json  batch.schema.json  chunk-manifest.schema.json  error.schema.json  event-record.schema.json  files-index-record.schema.json  gate-result.schema.json  output-record.schema.json  plan.schema.json  snapshot.schema.json  state.schema.json  store.schema.json  task.schema.json
scripts/: check_no_network.py  check_spec_protected.py  check_truth_stores.py
site/: astro.config.mjs
site/src/: site-config.ts
src/codebatch/: __init__.py  __main__.py  batch.py  cache.py  cache_meta.py  cas.py  cli.py  common.py  errors.py  index_build.py  paths.py  query.py  registry.py  runner.py  snapshot.py  store.py  workflow.py
src/codebatch/gates/: __init__.py  definitions.py  registry.py  result.py  runner.py
src/codebatch/tasks/: __init__.py  analyze.py  lint.py  parse.py  symbols.py
src/codebatch/ui/: __init__.py  diff.py  format.py  pager.py
tests/: README.md  conftest.py  test_analyze_task.py  test_batch.py  test_cache_perf.py  test_cas.py  test_diff_commands.py  test_diff_engine.py  test_e2e_acceptance.py  test_errors.py  test_explain.py  test_gate_cli.py  test_gates.py  test_index_build.py  test_inspect.py  test_lint_js.py  test_lint_task.py  test_parallel.py  test_parse_task.py  test_paths.py  test_phase2_gates.py  test_phase6_gates.py  test_phase7_gates.py  test_phase8_gates.py  test_query.py  test_runner.py  test_schema_validation.py  test_snapshot.py  test_store.py  test_store_stats.py  test_symbols_task.py  test_ui_format.py  test_version.py  test_workflow.py
tests/fixtures/corpus/: crlf_example.txt  emoji_🎉.md  hello.py  unicode_路径.txt
tests/fixtures/corpus-windows-only/: CaseA.cs  casea.cs.expected
tests/fixtures/corpus_lint/: messy.py
tests/fixtures/golden/snapshot/: files.index.jsonl  (+1 more)
tests/golden/ui/: json_basic.json  jsonl_basic.jsonl  table_basic.txt  table_no_header.txt
(+6 files in other folders)
