[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebatch"
version = "0.1.0"
description = "Content-addressed batch execution engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = ["batch", "execution", "content-addressed", "deterministic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lmdb>=1.4.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
treesitter = [
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]
all = [
    "codebatch[dev,treesitter]",
]

[project.scripts]
codebatch = "codebatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codebatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
# Note: pythonpath injection handled by tests/conftest.py for broader compatibility
